Make version updatable by _config.yml

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+---
+---
 <!DOCTYPE html>
 <html>
 
@@ -21,7 +23,7 @@
 <section>
   <div class="version">
     Current version:
-    <a href="https://github.com/rr/rr/blob/master/CHANGES.md#105-2013-03-23">1.0.5</a>
+    <a href="https://github.com/rr/rr/blob/master/CHANGES.md">{{ site.version }}</a>
   </div>
 
   <p><b>RR</b> is a Ruby library that lets you create and work with test
