Add Kou as current maintainer

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
   framework of choice, whether RSpec, Test::Unit or MiniTest/MiniSpec.
   RR is tested against all active Ruby versions.</p>
 
-  <p>RR was created by <a href="https://github.com/btakita">Brian Takita</a> and
-  is currently maintained by <a href="https://github.com/mcmire">Elliot
-  Winkler</a>.</p>
+  <p>RR was created by <a href="https://github.com/btakita">Brian Takita</a>.
+  Previously maintained by <a href="https://github.com/mcmire">Elliot Winkler</a>
+  and currently by <a href="https://github.com/kou">Kouhei Sutou</a>.</p>
 </section>
 
 <section>
